AC_INIT(src/dfbbcm_multilayerhdmvtest.c)

AC_PREREQ(2.52)

PACKAGE=directfb_bcm_samplecode
VERSION=0.1
DFB_VERSION=0.9.22

AM_INIT_AUTOMAKE($PACKAGE,$VERSION)

AC_SUBST(VERSION)

dnl Initialize maintainer mode
AM_MAINTAINER_MODE

ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"

AC_CANONICAL_HOST

AC_PROG_CC

AC_PROG_CXX

dnl Clear default CFLAGS
if test x"$CFLAGS" = x"-g -O2"; then
  CFLAGS=
fi
  
CFLAGS="-O3 -pipe $CFLAGS"

if test "x$GCC" = xyes; then
  CFLAGS="-Wall $CFLAGS"
fi


AC_ARG_ENABLE(debug, [  --enable-debug          turn on debugging [default=no]],
if eval "test x$enable_debug = xyes"; then
  CFLAGS="$CFLAGS -g3"
fi)


PKG_CHECK_MODULES(DIRECTFB, directfb >= $DFB_VERSION, ,
	AC_MSG_ERROR([$DIRECTFB_PKG_ERRORS
*** DirectFB $DFB_VERSION or newer is required. The latest version
*** of DirectFB is available from http://www.directfb.org/.]))

AC_PATH_PROG(FREETYPE_CONFIG, freetype-config, no)
if test "$FREETYPE_CONFIG" = no; then
  FREETYPE=no
  AC_MSG_WARN([
*** freetype-config not found -- FreeType font provider will not be built.])
else
  FREETYPE=yes
  FREETYPE_CFLAGS=`freetype-config --cflags`
  FREETYPE_LIBS=`freetype-config --libs`
fi

CAIRO_CFLAGS="-I$DIRECTFB_INSTALL_PATH/usr/local/include/cairo"
CAIRO_LIBS="-L$DIRECTFB_INSTALL_PATH/usr/local/lib -lcairo"

CFLAGS="$CFLAGS -Werror-implicit-function-declaration"

DATADIR=$datadir/directfb_bcm_samplecode
AC_SUBST(DATADIR)
AC_SUBST(FREETYPE_CFLAGS)
AC_SUBST(FREETYPE_LIBS)
AC_SUBST(CAIRO_CFLAGS)
AC_SUBST(CAIRO_LIBS)

AC_OUTPUT([
Makefile
data/Makefile
data/images/Makefile
data/animation/Makefile
src/Makefile
])
