## Makefile.am for directfb_bcm_samplecode/data

SUBDIRS = images animation

samplecodedatadir = @DATADIR@

samplecodedata_DATA = 			\
	E.png				\
	n.png				\
	C.png				\
	e.png 		    		\
	t.png 				\
	r.png 				\
	u.png 				\
	s.png 				\
	face-big.jpg 			\
	nebulae.jpg 			\
	planet.png 			\
	1080i_bluexmas.jpg		\
	1080i_fluorescence.png		\
	1080i_idyll.png			\
	earth_256x256_argb.png		\
	earth_256x256_rgb24.png		\
	babytux_128x256_argb.png	\
	nasa_shuttle0_128x256_argb.png	\
	nasa_shuttle0_128x256_rgb24.png \
	brcm_256x512_argb.png		\
	brcm_256x512_rgb24.png		\
	pg_512x256_sm_argb.png          \
        spark.png

fontsdatadir = @DATADIR@/fonts

fontsdata_DATA = msgothic.ttc

EXTRA_DIST =  $(samplecodedata_DATA) $(fontsdata_DATA)
