## Process this file with automake to generate Makefile.in

AUTOMAKE_OPTIONS = foreign

srcdir = @srcdir@
VPATH = @srcdir@

DISTCLEANFILES = $(srcdir)/*~ $(srcdir)/\#*\#

MAINTAINERCLEANFILES=

include_HEADERS = \
	DevCommand.h    LTTTypes.h     RTAIDB.h      Tables.h \
	EventDB.h       LinuxEvents.h  RTAIEvents.h  UserTrace.h \
	EventOptions.h  LinuxTables.h  RTAITables.h
