## Makefile.am for directfb_bcm_samplecode/data/images

imagesdir = @DATADIR@/images

images_DATA =                   \
	1080i_antialiased_text_red_argb.png \
	1080i_antialiased_text_red_argb_half.png \
	1080i_antialiased_text_red_lut8_half_nodither.png \
	1080i_layer1_argb_50.png \
	1080i_layer1_argb.png \
	1080i_layer2_argb.png \
	1080i_layer3_argb.png \
	1080i_smiley_argb.png \
	1080i_smiley_argb_half.png \
	1080i_smiley_lut8_half_dithered.png \
	1080i_smiley_lut8_half_nodither.png \
	720p_antialiased_text_red_argb.png \
	720p_antialiased_text_red_argb_half.png \
	720p_antialiased_text_red_lut8_half_nodither.png \
	720p_layer1_argb_50.png \
	720p_layer1_argb.png \
	720p_layer2_argb.png \
	720p_layer3_argb.png \
	720p_smiley_argb.png \
	720p_smiley_argb_half.png \
	720p_smiley_lut8_half_dithered.png \
	720p_smiley_lut8_half_nodither.png \
	ntsc_antialiased_text_red_argb.png \
	ntsc_antialiased_text_red_lut8_nodither.png \
	ntsc_layer1_argb_50.png \
	ntsc_layer1_argb.png \
	ntsc_layer2_argb.png \
	ntsc_layer3_argb.png \
	ntsc_smiley_argb.png \
	ntsc_smiley_lut8_dithered.png \
	ntsc_smiley_lut8_nodither.png \
	background.jpg \
	ntsc_bgmenu_argb.png \
	blue.png \
	yellow.png \
	frame_mainmenu_play.png \
	frame_mainmenu_settings.png \
	frame_settingsmenu.png

EXTRA_DIST = $(images_DATA)
